re PR c++/30847 (ICE with invalid statement expression)

PR c++/30847
	* typeck.c (build_modify_expr): For COND_EXPR on LHS, if RHS has void
	type issue error and return early.

	* g++.dg/parse/cond3.C: New test.

From-SVN: r123461